<resources>
    <string name="app_name">Circo Volador</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="hostname">http://circovolador.dnn.im/api/v2</string>
    <string name="fbalbums">http://graph.facebook.com/1407213609491588?fields=albums.fields(name,description,picture,photos)</string>
    <string name="fbphoto">http://graph.facebook.com/__photoID__/picture</string>

    <string name="title_activity_talleres">Talleres</string>
    <string name="title_activity_streaming">Streaming</string>
    <string name="title_activity_eventos">Cartelera</string>
    <string name="title_activity_proyectos">Proyectos</string>

    <string name="cv_upper">CIRCO VOLADOR</string>
    <string name="cvr_upper">CIRCO VOLADOR RADIO</string>
    <string name="cvr_lower">Circo Volador Radio</string>
    <string name="info_upper">INFORMACIÓN</string>
    <string name="price">Precio </string>
    <string name="buy">Comprar</string>

    <string name="now_playing">Ahora suena</string>
    <string name="loading_stream">Cargando streaming...</string>
    <string name="error_load_stream">Error al cargar el streaming</string>
    <string name="empty_text">Nada por aquí :(</string>

    <string name="streaming_controls_notification_title_template">Streaming controls: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="streaming_controls_notification_placeholder_text_template">You said %1$s and lorem
        ipsum dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit
        vel semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
</resources>
