<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.amb.circovolador.activities.Streaming"
    android:background="@color/c_blue">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">



        <com.h6ah4i.android.materialshadowninepatch.MaterialShadowContainerView
            android:id="@+id/shadow_item_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:shadowTranslationZ="2dp"
            app:shadowElevation="2dp">

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/actionbar_height"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_activity_streaming"
                    android:id="@+id/TitleBar"
                    android:textColor="@color/c_white"
                    android:paddingLeft="@dimen/actionbar_title_margiLeft"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/actionbar_title_textSize" />

                <ImageView
                    android:layout_width="@dimen/actionbar_logo_width"
                    android:layout_height="wrap_content"
                    android:id="@+id/Logo"
                    android:src="@drawable/logo"
                    android:layout_gravity="center"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />

                <com.andexert.library.RippleView
                    android:id="@+id/ContextMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="@dimen/actionbar_menubutton_padding"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    app:rv_rippleDuration="200">

                    <ImageView
                        android:layout_width="@dimen/actionbar_menubutton_boxsize"
                        android:layout_height="@dimen/actionbar_menubutton_boxsize"
                        android:layout_centerVertical="true"
                        android:src="@drawable/menu" />

                </com.andexert.library.RippleView>
            </RelativeLayout>

        </com.h6ah4i.android.materialshadowninepatch.MaterialShadowContainerView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.amb.circovolador.customViews.CustomVideoView
                android:layout_width="@dimen/videoplayer_boxsize"
                android:layout_height="@dimen/videoplayer_boxsize"
                android:id="@+id/videoView"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/bg_stream"
                android:scaleType="centerCrop" />

            <com.skyfishjy.library.RippleBackground
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/wireSound"
                app:rb_color="#cc185c75"
                app:rb_radius="32dp"
                app:rb_rippleAmount="4"
                app:rb_duration="3000"
                app:rb_scale="6">
            </com.skyfishjy.library.RippleBackground>

            <TextView
                android:layout_width="match_parent"
                android:text="@string/cvr_upper"
                android:id="@+id/textTitle"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textColor="@color/c_white"
                android:textSize="@dimen/cvr_upper_textSize"
                android:padding="@dimen/cvr_upper_padding"
                android:gravity="center"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="@dimen/bluecircle_boxsize"
                android:layout_height="@dimen/bluecircle_boxsize"
                android:id="@+id/imageView4"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/bg_btn_radio" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:padding="@dimen/trackinfo_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/now_playing"
                    android:id="@+id/textNow"
                    android:textColor="@color/c_white"
                    android:textSize="@dimen/trackinfo_nowPlaying_textSize" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/cvr_lower"
                    android:id="@+id/textSong"
                    android:textColor="@color/c_white"
                    android:textSize="@dimen/trackinfo_song_textSize" />
            </LinearLayout>

            <com.andexert.library.RippleView
                android:layout_width="@dimen/playPuaseButton_boxsize"
                android:layout_height="@dimen/playPuaseButton_boxsize"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                app:rv_rippleDuration="200">

                <ImageView
                    android:layout_width="@dimen/playPuaseButton_boxsize"
                    android:layout_height="@dimen/playPuaseButton_boxsize"
                    android:id="@+id/btnPlayPause"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/btn_play" />

            </com.andexert.library.RippleView>


            <include layout="@layout/layout_menu" />

        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
