<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.amb.circovolador.activities.Talleres"
    android:background="@color/c_blue">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <com.h6ah4i.android.materialshadowninepatch.MaterialShadowContainerView
            android:id="@+id/shadow_item_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:shadowTranslationZ="2dp"
            app:shadowElevation="2dp">

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/actionbar_height"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_activity_talleres"
                    android:id="@+id/TitleBar"
                    android:textColor="@color/c_white"
                    android:paddingLeft="@dimen/actionbar_title_margiLeft"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/actionbar_title_textSize" />

                <ImageView
                    android:layout_width="@dimen/actionbar_logo_width"
                    android:layout_height="wrap_content"
                    android:id="@+id/Logo"
                    android:src="@drawable/logo"
                    android:layout_gravity="center"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />

                <com.andexert.library.RippleView
                    android:id="@+id/ContextMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="@dimen/actionbar_menubutton_padding"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    app:rv_rippleDuration="200">

                    <ImageView
                        android:layout_width="@dimen/actionbar_menubutton_boxsize"
                        android:layout_height="@dimen/actionbar_menubutton_boxsize"
                        android:layout_centerVertical="true"
                        android:src="@drawable/menu" />

                </com.andexert.library.RippleView>
            </RelativeLayout>

        </com.h6ah4i.android.materialshadowninepatch.MaterialShadowContainerView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/bg_stream"
                android:scaleType="centerCrop" />

            <com.skyfishjy.library.RippleBackground
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/wireSound"
                app:rb_color="#cc185c75"
                app:rb_radius="32dp"
                app:rb_rippleAmount="4"
                app:rb_duration="3000"
                app:rb_scale="6">
            </com.skyfishjy.library.RippleBackground>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_text"
                android:id="@+id/textEmpty"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textColor="@color/c_white"
                android:textSize="22sp" />

            <android.support.v4.view.ViewPager
                android:id="@+id/tallerPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v4.view.ViewPager>

            <me.relex.circleindicator.CircleIndicator
                android:layout_width="fill_parent"
                android:layout_height="@dimen/circleindicator_height"
                android:id="@+id/circleIndicator"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                app:ci_drawable="@drawable/oval_blue"
                app:ci_drawable_unselected="@drawable/oval_white"
                app:ci_animator="@animator/dots_anim"
                app:ci_animator_reverse="@animator/dots_anim_reverse"
                app:ci_margin="2dp"
                />


            <com.andexert.library.RippleView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/popTaller"
                app:rv_rippleDuration="200">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/c_white_30"
                android:padding="@dimen/infobutton_padding"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/infobutton_icon_boxsize"
                    android:layout_height="@dimen/infobutton_icon_boxsize"
                    android:id="@+id/imageView2"
                    android:src="@drawable/btn_info"
                    android:layout_marginRight="@dimen/infobutton_icon_marginRight" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_upper"
                    android:id="@+id/textInfo"
                    android:textColor="@color/c_black"
                    android:textSize="@dimen/infobutton_text_textSize" />
            </LinearLayout>
            </com.andexert.library.RippleView>

            <include layout="@layout/layout_menu" />
            <include layout="@layout/popup_talleres" />

        </RelativeLayout>

    </LinearLayout>

    <View
        android:id="@+id/touchListener"
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_toucharea_height"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp" />
</RelativeLayout>
